--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,13 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-resizable-panels": "^4.4.1",
     "react-router-dom": "^7.12.0",
+    "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
