--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "seed:songs": "node src/seeds/song.seed.js",
@@ -18,9 +19,11 @@
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.22.1",
     "express-fileupload": "^1.5.2",
     "mongoose": "^9.1.1",
+    "node-cron": "^4.2.1",
+    "path-to-regexp": "^0.1.10",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
