--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "node-cron": "^4.2.1",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.0",
