--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "dependencies": {
-    "music-metadata": "^11.10.6"
-  }
+	"name": "spotify-clone",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+		"start": "npm start --prefix backend"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"music-metadata": "^11.11.0"
+	}
 }
